fix details page container margin on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -804,7 +804,7 @@
   align-items: flex-end;
   color: #777;
   padding-top: 12px;
-  font-size: 7px;
+  font-size: 12px;
   padding: 8px 10px;
 }
 
@@ -915,6 +915,17 @@
   max-height: 300px;
 }
 
+@media screen and (max-width: 500px) {
+  .container-col-article-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .article-comment-card a {
   color: black;
 }
@@ -929,6 +940,16 @@
   flex-grow: 1;
 }
 
+@media screen and (max-width: 500px) {
+  .article-comment-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .comment-card-border {
   border-top: 1px solid rgba(0, 0, 0, 0.25);
   border-width: 1px;
@@ -1263,6 +1284,17 @@ input:invalid {
   margin-right: 20%;
 }
 
+@media screen and (max-width: 500px) {
+  .container-col-settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .container-create-collection-row {
   display: flex;
   flex-direction: row;
@@ -1444,6 +1476,17 @@ input:invalid {
   margin-right: 20%;
 }
 
+@media screen and (max-width: 500px) {
+  .container-col-login {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .container-col-create {
   display: flex;
   flex-direction: column;
@@ -1454,6 +1497,17 @@ input:invalid {
   margin-right: 20%;
 }
 
+@media screen and (max-width: 500px) {
+  .container-col-create {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 5rem;
+    margin-bottom: 10rem;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .container-row-searchbar {
   display: flex;
   flex-direction: row;
