--- a/src/scss/article-card/article-card.scss
+++ b/src/scss/article-card/article-card.scss
@@ -38,7 +38,7 @@
 	align-items: flex-end;
     color: #777;
 	padding-top: 12px;
-    font-size: 7px;
+    font-size: 12px;
     padding: 8px 10px;
 }
 
