--- a/src/scss/article-details/article-details.scss
+++ b/src/scss/article-details/article-details.scss
@@ -1,5 +1,5 @@
 .article-details-title {
-    display: flex;
+  display: flex;
 	flex-flow: row;
 	justify-content: center;
 	align-items: center;
@@ -8,14 +8,14 @@
 }
 
 .article-details-content {
-    display: flex;
+  display: flex;
 	flex-flow: row;
 	justify-content: center;
 	align-items: center;
 	font-size: 20px;
 	padding-top: 14px;
-    padding-left: 8px;
-    padding-bottom: 10px;
+  padding-left: 8px;
+  padding-bottom: 10px;
 	margin: 20px 80px 80px 80px;
 }
 
@@ -43,4 +43,16 @@
   .article-card-cover {
 	object-fit: cover;
 	max-height: 300px;
+}
+
+@media screen and (max-width: 500px) {
+  .container-col-article-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+    }
 }
