--- a/src/scss/comment/article-comment.scss
+++ b/src/scss/comment/article-comment.scss
@@ -12,6 +12,17 @@
     flex-grow: 1;
 }
 
+@media screen and (max-width: 500px) {
+.article-comment-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    margin-left: 5%;
+    margin-right: 5%;
+    }
+}
+
 .comment-card-border {
     border-top: 1px solid rgba(0, 0, 0, 0.25);
     border-width: 1px;
